--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,19 +1,31 @@
 # Jobs
 # VP of Global Communications
-- company: Springfield International Human Rights Outreach
-  position: VP of Global Communications
-  duration: Oct, 2013 &mdash; Present
-  summary: Write about your core competencies in one or two sentences describing your position. If you held the position for a long time, it could be a longer section, including a couple bullet points	<ul class="resume-item-list"><li>A project you are proud of</li><li>Another awesome project</li><li>or a team or department you worked with</li></ul>
-
-# Director of Digital Stratgy
-- company: United Nations Human Rights Council
-  position: Director of Digital Strategy
-  duration:  Jun, 2010 &mdash; Sept, 2013
-  summary: If your stint was shorter, feel free to be brief and just call out the most meaningful points of your role. Be concise, and be meaninful. The person reading just needs enough to want to talk to you more about your experience.
-
+- company: IT Department, Uppsala University
+  position: Teaching Assistant
+  duration: 2015 &mdash; 2020
+  summary: During my PhD I served as a teaching assistant for various courses in the IT department.
+      <ul>
+          <li> Internet of Things</li>
+          <li> Algorithms and Data Structures II</li>
+          <li> Computer Networks I</li>
+          <li> Distributed Information Systems</li>
+          <li> Operating Systems I, Process Oriented Programming and Computer Systems</li>
+          <li> Program Design and Data Structures</li>
+      </ul>
 
 # Communications Coordinator
-- company: Springfield Women & Children's Center
-  position: Communications Coordinator
-  duration:   Jun, 2008  &mdash; May, 2010
-  summary: Led communication efforts across digital and traditional media channels for marketing and public relations, internal communication strategies, and coordinated support programs for the recipients of the center's services.
+- company: 
+  position: External reviewer for various publications
+  duration: 2016 &mdash; 2020
+  summary: I have served as an external reviewer for various journals and conferences.
+    <ul>
+        <li> IEEE/ACM Transactions on Networking (2020) </li>
+        <li> IEEE Transactions on Mobile Computing (2020) </li>
+        <li> IEEE Internet of Things Journal (2020) </li>
+        <li> IEEE Wireless Communication Letters (2019) </li>
+          <ul><small>Exemplary Reviewer of IEEE Wireless Communications Letters in 2019</small></ul>
+        <li> ACM Transactions on Internet of Things (2019)</li>
+        <li> IEEE Wireless Communication Letters (2018)</li>
+        <li> IEEE Journal of Communications and Networks (2017) </li>
+        <li> IEEE International Conference on Industrial Informatics (2016)</li>
+    </ul>
